# tx-lens

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
tests/: conftest.py
tests/helpers/: __init__.py  vcr.py
tests/services/: conftest.py  test_transaction_service.py
tests/services/cassettes/test_transaction_service/: test_fetch_transaction.yaml  test_fetch_unexisting_transaction.yaml
tx_lens/: app.py  main.py  settings.py
tx_lens/api/: app.py
tx_lens/api/v1/: __init__.py  router.py
tx_lens/api/v1/endpoints/: transactions.py
tx_lens/api/v1/routes/: __init__.py  exception_handler.py  schemas.py  transactions.py
tx_lens/docs/: PLAN.md
tx_lens/domain/: __init__.py  transaction.py
tx_lens/domain/exceptions/: __init__.py  transaction.py
tx_lens/domain/interfaces/: __init__.py  network.py
tx_lens/domain/models/: __init__.py  transaction.py  transaction_receipt.py
tx_lens/infrastructure/: __init__.py
tx_lens/infrastructure/api_clients/: __init__.py  infura.py
tx_lens/injections/: __init__.py  dependencies.py  injections.py
tx_lens/services/: __init__.py  transaction.py
tx_lens/utils/: logger.py
