[project]
name = "tx-lens"
version = "0.1.0"
description = "Tx Lens is an AI system that converts raw blockchain transactions into clear, human-readable explanations"
readme = "README.md"
authors = [
  { name = "Matias Gimenez" },
]

requires-python = ">=3.13"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi[standard]>=0.121.3",
  "loguru>=0.7.3",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12",
]

[dependency-groups]
dev = [
  "ipykernel>=7.1",
  "poethepoet>=0.37",
  "pre-commit>=4.4",
]

[tool.ruff]
line-length = 88

[tool.pylint]
disable = [
  "missing-docstring",
  "missing-module-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "astroid-error",
]

[tool.poe.tasks]
dev = "uvicorn tx_lens.api.app:app --reload --host 0.0.0.0 --port 8000"
format = "pre-commit run --all-files --verbose"
